--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "devDependencies": {
     "css-loader": "^7.1.2",
     "eslint": "^9.33.0",
+    "favicons": "^7.2.0",
+    "favicons-webpack-plugin": "^6.0.1",
     "html-webpack-plugin": "^5.6.3",
     "nodemon": "^3.1.10",
     "style-loader": "^4.0.0",
